--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,9 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="alt_colorPrimary">#8a3fb5</color>
+    <color name="alt_colorPrimaryDark">#7a309f</color>
+    <color name="alt_colorAccent">#ffbf40</color>
+
     <color name="black_overlay">#66000000</color>
 </resources>
