--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,7 +7,7 @@
     tools:context="iti_edu.battuta.SplashActivity">
 
     <Button
-        android:text="@string/touch_anywhere"
+        android:text="@string/loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/splash_touchEvent"
@@ -22,7 +22,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,8 +60,10 @@
                 android:textAlignment="center"
                 android:paddingRight="20dp"
                 android:paddingLeft="20dp"
-                android:fontFamily="cursive"
-                android:textSize="20sp" />
+                android:fontFamily="sans-serif"
+                android:textSize="18sp"
+                android:textAllCaps="false"
+                android:textStyle="normal|italic" />
 
         </LinearLayout>
     </ScrollView>
