--- a/app/src/main/res/layout/info_trip_dialog.xml
+++ b/app/src/main/res/layout/info_trip_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cast_expanded_controller_ad_label_background_color">
+    android:background="@android:color/transparent">
 
     <FrameLayout
         android:layout_width="wrap_content"
